--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,106 @@
+body{
+    font-family: 'Montserrat-thin', sans-serif;
+}
+
 #title{
     background-color: #ff4c68;
+    color: #fff;
 }
 
 h1{
     font-family: 'Montserrat', sans-serif;
-    size: 3rem;
+    size: 2.5rem;
     line-height: 1.5;
+}
+
+h2{
+    font-family: 'Montserrat', sans-serif ;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+h3{
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container-fluid{
     padding: 3% 15%;
 }
 
+p{
+    font-family: 'Montserrat-thin', sans-serif;
+    color:#8f8f8f
+}
+
+/* Navigation Bar */
+
+.navbar{
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand{
+    font-family: "Ubuntu";
+    size: 2.5rem;
+    padding-top: bold;
+}
+
+.nav-item{
+    padding: 0 18px;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    font-family: "Montserrat-Light";
+}
+
+/* Download Buttons*/
+
+.download-button{
+    margin: 5% 3% 5% 0%;
+}
+
+/* Image */
+
+.title-image{
+    width: 60%;
+    transform: rotate(25deg);
+}
+
+#features{
+    padding: 7% 15% ;
+}
+
+.feature-box{
+    text-align: center;
+    padding: 5%;
+}
+
+.icon{
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.icon:hover{
+    color: #ff4c68;
+}
+
+/* Testimonials Section */
+
+#testimonials{
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+}
 
 
-/*font-family: 'Ubuntu', sans-serif;*/
+/* Press Section */
+.press{
+    text-align: center;
+    padding-bottom: 3%;
+}
